--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -1,3 +1,7 @@
-{{ define "main" }}
+{{- define "title" -}}
+  {{ .Site.Title }}
+{{ end }}
+
+{{- define "main" -}}
   <div>{{ .Content }}</div>
 {{ end }}
