--- a/assets/_pure-extension.scss
+++ b/assets/_pure-extension.scss
@@ -50,6 +50,6 @@ html, button, input, select, textarea, .pure-g [class *= "pure-u"] {
   }
 
   &.active {
-    color: #1F37E6;
+    color: $color-link;
   }
 }
