--- a/layouts/partials/book/nav-tree.html
+++ b/layouts/partials/book/nav-tree.html
@@ -14,6 +14,7 @@
 
 <nav role="navigation">
   {{ partial "book/nav-brand" . }}
+  {{ partial "book/nav-before" . }}
 
   <ul>
   {{ range .Scratch.Get "BookSections" }}
