--- a/layouts/partials/book/nav.html
+++ b/layouts/partials/book/nav.html
@@ -1,5 +1,5 @@
 {{ if .Site.Params.BookMenuBundle }}
   {{ partial "book/nav-bundle" . }}
 {{ else }}
-  {{ partial "book/nav-auto" . }}
+  {{ partial "book/nav-tree" . }}
 {{ end }}
