--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -1,7 +1,1 @@
-{{- define "title" -}}
-  {{ .Site.Title }}
-{{ end }}
-
-{{- define "main" -}}
-  <div>{{ .Content }}</div>
-{{ end }}
+{{ define "." }} {{ end }}
