--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -16,7 +16,7 @@ $block-border-radius: 0.15rem;
   }
 
   p code {
-    padding: $padding-1 $padding-4;
+    padding: 0 $padding-4;
     background: $gray-100;
     border-radius: $block-border-radius;
   }
