--- a/layouts/partials/docs/html-head.html
+++ b/layouts/partials/docs/html-head.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:300,400,700" rel="stylesheet">
 <link href="/css/pure-min.css" rel="stylesheet">
 <!-- <link href="/css/grids-responsive-min.css" rel="stylesheet"> -->
 
