--- a/assets/_pure-extension.scss
+++ b/assets/_pure-extension.scss
@@ -1,9 +1,8 @@
 @import 'variables';
 
 html, button, input, select, textarea, .pure-g [class *= "pure-u"] {
-  font-family: "Open Sans", "Roboto", sans-serif;
-  font-weight: 300;
-  
+  font-family: Roboto, sans-serif;
+  font-weight: $body-font-weight;
 }
 
 .pure-g {
@@ -30,12 +29,11 @@ html, button, input, select, textarea, .pure-g [class *= "pure-u"] {
   
   // font weight only for root sections
   > li > .section {
-    font-weight: 600;
+    font-weight: 700;
   }
 }
 
 .pure-menu-link, .pure-menu-heading {
-  color: $gray-800;
   padding: $padding-4 $padding-16;
   text-transform: capitalize;
 }
@@ -43,13 +41,5 @@ html, button, input, select, textarea, .pure-g [class *= "pure-u"] {
 .pure-menu-link {
   &:hover, &.active {
     background: none;
-  }
-
-  &:hover {
-    color: $gray-600;
-  }
-
-  &.active {
-    color: $color-link;
   }
 }
