--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -3,6 +3,10 @@
 $block-border-radius: 0.15rem;
 
 .markdown {
+  h1, h2, h3, h4, h5 {
+    font-weight: 400;
+  }
+  
   a {
     text-decoration: none;
 
