Improve side menu rendering

--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -6,6 +6,10 @@ $block-border-radius: 0.15rem;
   h1, h2, h3, h4, h5 {
     font-weight: 400;
   }
+
+  b, optgroup, strong {
+    font-weight: 400;
+  }
   
   a {
     text-decoration: none;
