--- a/layouts/docs/baseof.html
+++ b/layouts/docs/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- {{ partial "docs/shared" }} -->
+{{- partial "docs/shared" -}}
 <html>
 <head>
   {{ partial "docs/html-head" . }}
