--- a/layouts/docs/baseof.html
+++ b/layouts/docs/baseof.html
@@ -7,39 +7,39 @@
 </head>
 
 <body>
-  <div class="pure-g">
+  <div class="header">
+    {{ partial "docs/header" . }}
+  </div>
+  
+  <input type="checkbox" style="display: none" id="nav-control" />
+  <nav role="navigation" class="menu">
+    {{ partial "docs/inject/nav-before" . }}
+    
+    {{ if .Site.Params.BookMenuBundle }}
+      {{ partial "docs/nav-bundle" . }}
+    {{ else }}
+      {{ partial "docs/nav-filetree" . }}
+    {{ end }}
+  
+    {{ partial "docs/inject/nav-after" . }}
+  </nav>
 
-    <div class="pure-u book-nav">
-      <nav role="navigation">
-        {{ partial "docs/nav-brand" . }}
-        {{ partial "docs/inject/nav-before" . }}
-        
-        {{ if .Site.Params.BookMenuBundle }}
-          {{ partial "docs/nav-bundle" . }}
-        {{ else }}
-          {{ partial "docs/nav-filetree" . }}
-        {{ end }}
-      
-        {{ partial "docs/inject/nav-after" . }}
-      </nav>
-    </div>
-    <div class="pure-u book-content">
-      <div class="pure-g">
-
-        <div class="pure-u book-page markdown">
-          {{- .Content -}}
-        </div>
-        {{ $showToC := default (default true .Site.Params.BookShowToC) .Params.bookshowtoc }}
-        {{ if and ($showToC) (.Page.TableOfContents) }}
-        <div class="pure-u book-toc">
-          {{ partial "docs/toc" . }}
-        </div>
-        {{ end }}
-
+  <div>
+    
+    <div class="pure-g content">
+      <div class="pure-u-1 pure-u-lg-2-3 page markdown">
+        {{- .Content -}}
       </div>
+      {{ $showToC := default (default true .Site.Params.BookShowToC) .Params.bookshowtoc }}
+      {{ if and ($showToC) (.Page.TableOfContents) }}
+      <div class="pure-u-1 pure-u-lg-1-3 pure-hidden-md toc">
+        {{ partial "docs/toc" . }}
+      </div>
+      {{ end }}
     </div>
 
   </div>
+
   {{ partial "docs/inject/body" . }}
 </body>
 </html>
