--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -5,6 +5,10 @@ $block-border-radius: 0.15rem;
 .markdown {
   line-height: 1.5;
 
+  :first-child {
+    margin-top: 0;
+  }
+
   h1, h2, h3, h4, h5 {
     font-weight: 400;
     line-height: 1.25;
@@ -37,6 +41,7 @@ $block-border-radius: 0.15rem;
     background: $gray-100;
     border-radius: $block-border-radius;
     font-size: $font-size-14;
+    overflow-x: auto;
   }
 
   blockquote {
